--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,15 @@
 plugins {
     id 'java-library'
     id 'maven-publish'
+    id 'signing'
     id 'org.springframework.boot' version '2.4.7' apply false
     id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
     id 'jacoco'
 }
 
+
 allprojects {
-    group 'io.miragon.bpmrepo'
+    group 'io.miragon.bpmrepo.citest'
     version '0.0.1'
 
     sourceCompatibility = JavaVersion.VERSION_11
@@ -18,9 +20,6 @@ allprojects {
     }
 }
 
-allprojects {
-    apply plugin: 'java'
-}
 
 jacocoTestReport {
     reports {
@@ -32,6 +31,7 @@ jacocoTestReport {
 check.dependsOn jacocoTestReport
 
 subprojects {
+    apply plugin: 'java'
     apply plugin: 'java-library'
     apply plugin: 'maven-publish'
     apply plugin: 'io.spring.dependency-management'
@@ -41,6 +41,11 @@ subprojects {
         imports {
             mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
         }
+    }
+
+    java {
+        withJavadocJar()
+        withSourcesJar()
     }
 
     ext.springBootVersion = '2.4.0'
@@ -53,11 +58,6 @@ subprojects {
         compileOnly "org.projectlombok:lombok:${lombokVersion}"
         annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
         annotationProcessor "org.projectlombok:lombok-mapstruct-binding:0.2.0"
-    }
-
-    task sourcesJar(type: Jar, dependsOn: classes) {
-        classifier = 'sources'
-        from sourceSets.main.allSource
     }
 
     ext {
@@ -77,7 +77,7 @@ subprojects {
             }
 
             scm {
-                url "https://github.com/flowsquad/bpm-repo-starter.git"
+                url "https://github.com/flowsquad/bpm-repo.git"
             }
         }
     }
