--- a/core/build.gradle
+++ b/core/build.gradle
@@ -7,22 +7,23 @@ compileJava {
 dependencies {
 
     // REST-Resource related Dependencies
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    compileOnly 'org.springframework.boot:spring-boot-starter-web'
+    compileOnly 'org.springframework.boot:spring-boot-starter-validation'
+    compileOnly "org.springframework.boot:spring-boot-starter-data-jpa"
 
     //Mapping
     implementation "org.mapstruct:mapstruct:${mapStructVersion}"
     annotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"
+    annotationProcessor "org.projectlombok:lombok-mapstruct-binding:0.2.0"
 
-    // Database related Dependencies
-    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
-
-    // Swagger Dependencies
-    implementation 'org.springdoc:springdoc-openapi-ui:1.5.0'
+    implementation 'org.springdoc:springdoc-openapi-ui:1.5.2'
 
     //Commons
     implementation 'commons-io:commons-io:2.7'
 
+    testImplementation 'org.springframework.boot:spring-boot-starter-web'
+    testImplementation 'org.springframework.boot:spring-boot-starter-validation'
+    testImplementation "org.springframework.boot:spring-boot-starter-data-jpa"
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation 'com.h2database:h2:1.3.148'
 
@@ -50,6 +51,6 @@ publishing {
     }
 }
 
-signing {
-    sign publishing.publications.publishCore
-}
+//signing {
+//    sign publishing.publications.publishCore
+//}
