--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ plugins {
 
 allprojects {
     group 'io.miragon.bpmrepo.citest'
-    version '0.0.2'
+    version '0.0.3-SNAPSHOT'
 
     sourceCompatibility = JavaVersion.VERSION_11
 
