fix: remove teams + deploy version

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -60,9 +60,8 @@ publishing {
     }
 }
 
-/*
-signing {
-    sign publishing.publications.publishCore
-}
 
- */
+//signing {
+//    sign publishing.publications.publishCore
+//}
+
