--- a/spring-boot-starter/build.gradle
+++ b/spring-boot-starter/build.gradle
@@ -27,8 +27,7 @@ publishing {
         }
     }
 }
-/*
-signing {
-    sign publishing.publications.publishStarter
-}
-*/
+
+//signing {
+//    sign publishing.publications.publishStarter
+//}
