--- a/spring-boot-starter/build.gradle
+++ b/spring-boot-starter/build.gradle
@@ -28,6 +28,6 @@ publishing {
     }
 }
 
-//signing {
-//    sign publishing.publications.publishStarter
-//}
+signing {
+    sign publishing.publications.publishStarter
+}
