--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,9 @@ jobs:
         run: |
           mvn versions:set --batch-mode -DremoveSnapshot -DprocessAllModules
 
+      - name: Set release version env variable
+        run: echo "RELEASE_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)" >> $GITHUB_ENV
+
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots --no-transfer-progress verify
 
@@ -53,4 +56,4 @@ jobs:
         with:
           context: ./bpm-server
           push: true
-          tags: miragon/bpm-server:${{ github.ref }},miragon/bpm-server:dev
+          tags: miragon/bpm-server:${{ env.RELEASE_VERSION }},miragon/bpm-server:dev
