--- a/bpm-starter/pom.xml
+++ b/bpm-starter/pom.xml
@@ -10,8 +10,8 @@
         <version>0.2.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>spring-boot-starter</artifactId>
-    <name>spring-boot-starter</name>
+    <artifactId>bpm-starter</artifactId>
+    <name>bpm-starter</name>
     <packaging>jar</packaging>
 
     <dependencies>
@@ -33,7 +33,6 @@
         <dependency>
             <groupId>de.muenchen.oss.digiwf</groupId>
             <artifactId>core</artifactId>
-            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
