--- a/example/pom.xml
+++ b/example/pom.xml
@@ -17,8 +17,7 @@
     <dependencies>
         <dependency>
             <groupId>de.muenchen.oss.digiwf</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-            <version>${project.version}</version>
+            <artifactId>bpm-starter</artifactId>
         </dependency>
 
         <!-- Spring boot libraries -->
@@ -35,7 +34,7 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
-            <version>1.5.9</version>
+            <version>1.7.0</version>
         </dependency>
 
         <!-- Spring Security -->
@@ -47,7 +46,7 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>1.3.148</version>
+            <version>1.4.200</version>
         </dependency>
     </dependencies>
 
