--- a/core/pom.xml
+++ b/core/pom.xml
@@ -16,7 +16,6 @@
 
     <properties>
         <commons-lang3.version>3.12.0</commons-lang3.version>
-        <h2.version>1.4.200</h2.version>
     </properties>
 
     <dependencies>
@@ -41,9 +40,10 @@
 
         <dependency>
             <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-ui</artifactId>
-            <version>1.7.0</version>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.2.0</version>
         </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -53,7 +53,6 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>${h2.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
