--- a/stack/local-docker.env
+++ b/stack/local-docker.env
@@ -5,6 +5,9 @@ BPMSERVER_PORT=8092
 SSO_BASE_URL=http://keycloak:8080/auth
 SSO_REALM=P82
 SSO_ISSUER_URL=${SSO_BASE_URL}/realms/${SSO_REALM}
+# required for the application to start
+SSO_TASK_CLIENT_ID=task-management
+SSO_TASK_CLIENT_SECRET=s3creT
 
 KAFKA_BOOTSTRAP_SERVER=localhost
 KAFKA_BOOTSTRAP_SERVER_PORT=29092
