--- a/stack/local-docker.env
+++ b/stack/local-docker.env
@@ -1,4 +1,4 @@
-DIGIWF_ENV=local_01
+DIGIWF_ENV=local-01
 
 BPMSERVER_PORT=8092
 
@@ -13,18 +13,16 @@ KAFKA_BOOTSTRAP_SERVER=localhost
 KAFKA_BOOTSTRAP_SERVER_PORT=29092
 KAFKA_SECURITY_PROTOCOL=PLAINTEXT
 
-BPMSERVER_DATASOURCE_URL=jdbc:h2:file:~/repodb;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
-BPMSERVER_DATASOURCE_USER=sa
-BPMSERVER_DATASOURCE_PASSWORD=
-BPMSERVER_DATASOURCE_DRIVERCLASSNAME=org.h2.Driver
-BPMSERVER_DATABASE_PLATFORM=org.hibernate.dialect.H2Dialect
-BPMSERVER_DATABASE=H2
-
-#BPMSERVER_DATASOURCE_URL=jdbc:h2:file:~/repodb;DB_CLOSE_ON_EXIT=FALSE
+#BPMSERVER_DATASOURCE_URL=jdbc:h2:file:~/cocreationdb;DB_CLOSE_ON_EXIT=FALSE
 #BPMSERVER_DATASOURCE_USER=sa
 #BPMSERVER_DATASOURCE_PASSWORD=
-#BPMSERVER_DATASOURCE_DRIVERCLASSNAME=org.postgresql.Driver
-#BPMSERVER_DATABASE_PLATFORM=org.hibernate.dialect.H2Dialect
-#BPMSERVER_DATABASE=postgresql
+#BPMSERVER_DATASOURCE_DRIVERCLASSNAME=org.h2.Driver
+#BPMSERVER_DATABASE=H2
 
-#BPMSERVER_DEPLOYMENT_TARGETS=LOCAL
+BPMSERVER_DATASOURCE_URL=jdbc:postgresql://localhost:25439/cocreationdb
+BPMSERVER_DATASOURCE_USER=user
+BPMSERVER_DATASOURCE_PASSWORD=secret
+BPMSERVER_DATASOURCE_DRIVERCLASSNAME=org.postgresql.Driver
+BPMSERVER_DATABASE=postgresql
+
+BPMSERVER_DEPLOYMENT_TARGETS=LOCAL
