--- a/stack/docker-compose.yml
+++ b/stack/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   api-gateway:
     image: nginx:latest
     ports:
-      - "8091:80"
+      - "8095:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     extra_hosts:
@@ -15,3 +15,13 @@ services:
       - "8093:8080"
     profiles:
       - bpm-repo-client
+
+  postgres-cocreation:
+    image: postgres:13.2
+    container_name: digiwf-postgres-cocreation
+    environment:
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: secret
+      POSTGRES_DB: cocreationdb
+    ports:
+      - '25439:5432'
