--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,8 +17,11 @@ jobs:
           distribution: 'adopt'
           cache: "maven"
 
+      - name: Prepare mvnw
+        run: chmod +x ./mvnw
+
       - name: Build with Maven
-        run: mvn --batch-mode --update-snapshots --no-transfer-progress verify
+        run: ./mvnw --batch-mode --update-snapshots --no-transfer-progress verify
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
