--- a/digiwf-cocreation-deployment/src/main/resources/application.yml
+++ b/digiwf-cocreation-deployment/src/main/resources/application.yml
@@ -1,1 +1,10 @@
+server:
+  port: '${DEPLOYMENT_SERVER_PORT:8080}'
 
+digiwf:
+  security:
+    client-id: ${SSO_DEPLOYMENT_CLIENT_ID}
+    client-secret: ${SSO_DEPLOYMENT_CLIENT_SECRET}
+    # whitelist deployment endpoint - TODO: remove this when we have a proper security setup
+    permitted-urls:
+      - /api/deployment
