--- a/digiwf-cocreation-deployment/src/main/resources/application-local.yml
+++ b/digiwf-cocreation-deployment/src/main/resources/application-local.yml
@@ -4,7 +4,7 @@ io:
       rest:
         targets:
           local:
-            bpmn: 'http://localhost:${ENGINE_SERVER_PORT}/rest/deployment/v2/'
-            dmn: 'http://localhost:${ENGINE_SERVER_PORT}/rest/deployment/v2/'
-            form: 'http://localhost:${ENGINE_SERVER_PORT}/rest/deployment/v2/'
-            config: 'http://localhost:${ENGINE_SERVER_PORT}/rest/deployment/v2/'
+            bpmn: '${ENGINE_HOST:http://localhost}:${ENGINE_SERVER_PORT}/rest/deployment/v2/'
+            dmn: '${ENGINE_HOST:http://localhost}:${ENGINE_SERVER_PORT}/rest/deployment/v2/'
+            form: '${ENGINE_HOST:http://localhost}:${ENGINE_SERVER_PORT}/rest/deployment/v2/'
+            config: '${ENGINE_HOST:http://localhost}:${ENGINE_SERVER_PORT}/rest/deployment/v2/'
