feature: update dockerhub repository description

--- a/.github/workflows/workflow-release-services.yaml
+++ b/.github/workflows/workflow-release-services.yaml
@@ -66,3 +66,11 @@ jobs:
           context: ./digiwf-cocreation-deployment
           push: true
           tags: itatm/digiwf-cocreation-deployment:${{ inputs.release-version }},itatm/digiwf-cocreation-deployment:dev
+
+      - name: Update digiwf-cocreation-deployment repo description
+        uses: peter-evans/dockerhub-description@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          repository: itatm/digiwf-cocreation-deployment
+          readme-filepath: ./digiwf-cocreation-deployment/README.md
