--- a/.github/workflows/workflow-release-services.yaml
+++ b/.github/workflows/workflow-release-services.yaml
@@ -73,6 +73,6 @@ jobs:
         uses: peter-evans/dockerhub-description@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          password: ${{ secrets.DOCKERHUB_KEY }}
           repository: itatm/digiwf-cocreation-deployment
           readme-filepath: ./digiwf-cocreation-deployment/README.md
