--- a/local.env
+++ b/local.env
@@ -7,4 +7,6 @@ SSO_ISSUER_URL=${SSO_BASE_URL}/realms/${SSO_REALM}
 SSO_DEPLOYMENT_CLIENT_ID=task-management
 SSO_DEPLOYMENT_CLIENT_SECRET=s3creT
 
-ENGINE_SERVER_PORT=39146
+# wiremock port
+#ENGINE_SERVER_PORT=39146
+ENGINE_SERVER_PORT=9998
