--- a/local.env
+++ b/local.env
@@ -7,6 +7,7 @@ SSO_ISSUER_URL=${SSO_BASE_URL}/realms/${SSO_REALM}
 SSO_DEPLOYMENT_CLIENT_ID=task-management
 SSO_DEPLOYMENT_CLIENT_SECRET=s3creT
 
-# wiremock port
+# digiwf-core port
 #ENGINE_SERVER_PORT=39146
+# wiremock port
 ENGINE_SERVER_PORT=9998
