feature(#1156): init deployment service (#6)
* feature(#1156): init deployment service

* feature(#1156): init deployment service

* feature(#1156): init deployment service

* rm: auto generated test

* fix: build issues

* fix: release pipeline

* fix: release pipeline

* fix: add engine_host variable for docker setup

* docs: add documentation for digiwf-cocreation-deployment

* feature: add showcase process

* feature: update dockerhub repository description

* fix: mvn build

* fix: mvn build

* chore: update dependencies

* Update digiwf-cocreation-deployment/README.md

Co-authored-by: Simon Hirtreiter <simon.hirtreiter@hotmail.de>

* docs: link to local showcase resources

* chore: rename digiwf-cocreation-deployment to digiwf-cocreation-deployment-service

* chore: rename digiwf-cocreation-deployment to digiwf-cocreation-deployment-service

* fix: git

* Revert "fix: git"

This reverts commit 547f7481d4f28aea143042221b41b48bfe79aaf9.

* fix: git

* fix: git by checking in the resources folder properly

* fix: miranum.json

* chore: rename digiwf-cocreation-deployment to digiwf-cocreation-deployment-service

* fix: show swagger-ui.html

* feat: add wiremock setup for local smock testing

* docs: add description and link to official documentation

* Update .github/workflows/workflow-release-services.yaml

Co-authored-by: Simon Hirtreiter <simon.hirtreiter@hotmail.de>

* Update .github/workflows/workflow-release-services.yaml

Co-authored-by: Simon Hirtreiter <simon.hirtreiter@hotmail.de>

* Update digiwf-cocreation-deployment-service/README.md

Co-authored-by: Simon Hirtreiter <simon.hirtreiter@hotmail.de>

* Update local.env

Co-authored-by: Simon Hirtreiter <simon.hirtreiter@hotmail.de>

* chore: move local.env to stack directory

* chore: move local.env to stack directory

* docs: adjust docs to pr feedback

---------

Co-authored-by: Simon Hirtreiter <simon.hirtreiter@hotmail.

--- a/.github/workflows/workflow-release-services.yaml
+++ b/.github/workflows/workflow-release-services.yaml
@@ -44,6 +44,7 @@ jobs:
         run: ./mvnw --batch-mode clean install -DskipTests
 
       - name: Perform maven release
+        if: inputs.snapshot-release == false
         run: ./mvnw --batch-mode --no-transfer-progress deploy --activate-profiles release -DskipTests
         env:
           SIGN_KEY_PASS: ${{ secrets.gpg_passphrase }}
@@ -63,6 +64,15 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: ./digiwf-deployment-service
+          context: ./digiwf-cocreation-deployment-service
           push: true
-          tags: itatm/digiwf-deployment-service:${{ inputs.release-version }},itatm/digiwf-deployment-service:dev
+          tags: itatm/digiwf-cocreation-deployment-service:${{ inputs.release-version }},itatm/digiwf-cocreation-deployment-service:dev
+
+      - name: Update digiwf-cocreation-deployment repo description
+        if: inputs.snapshot-release == false
+        uses: peter-evans/dockerhub-description@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_KEY }}
+          repository: itatm/digiwf-cocreation-deployment-service
+          readme-filepath: ./digiwf-cocreation-deployment-service/README.md
