--- a/digiwf-cocreation-deployment-service/pom.xml
+++ b/digiwf-cocreation-deployment-service/pom.xml
@@ -8,12 +8,14 @@
 		<version>0.1.0-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>digiwf-cocreation-deployment</artifactId>
+	<artifactId>digiwf-cocreation-deployment-service</artifactId>
 	<name>digiwf-cocreation-deployment</name>
 	<description>DigiWF CoCreation deployment service</description>
 
 	<properties>
 		<spring-boot.version>3.1.7</spring-boot.version>
+		<miranum-ide.version>0.3.2</miranum-ide.version>
+		<digiwf-core.version>1.7.2</digiwf-core.version>
 	</properties>
 
 	<dependencyManagement>
@@ -38,6 +40,25 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<!-- Miranum-IDE starter -->
+		<dependency>
+			<groupId>io.miragon.miranum</groupId>
+			<artifactId>miranum-deployment-server-rest-starter</artifactId>
+			<version>${miranum-ide.version}</version>
+		</dependency>
+
+		<!-- DigiWF -->
+		<dependency>
+			<groupId>de.muenchen.oss.digiwf</groupId>
+			<artifactId>digiwf-spring-security-starter</artifactId>
+			<version>${digiwf-core.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>de.muenchen.oss.digiwf</groupId>
+			<artifactId>digiwf-spring-logging-and-tracing</artifactId>
+			<version>${digiwf-core.version}</version>
 		</dependency>
 
 		<dependency>
